src/main/kotlin/com/example/potpot_server/global/error/ErrorResponse.kt
package com.example.potpot_server.global.error

data class ErrorResponse(
    val status: Int,
    val message: String?
)